--- a/pratos.css
+++ b/pratos.css
@@ -7,6 +7,7 @@ body {
 	background-color: #fed1ca;
 	background-image: url(fundo7.jpg);
 	background-size: cover;
+	background-position: center;
 	background-attachment: fixed;
 	font-family: 'roboto', sans-serif;
 }
