--- a/pratos.css
+++ b/pratos.css
@@ -4,7 +4,7 @@
 }
 
 body {
-	text-align: center;
+	align-items: center;
 	width: 100%;
 	background-color: #fed1ca;
 	background-image: url(fundo7.jpg);
