--- a/pratos.css
+++ b/pratos.css
@@ -7,8 +7,10 @@ body {
 	align-items: center;
 	width: 100%;
 	background-color: #fed1ca;
+	background-image: url(./fundo7.jpg);
+	background-size: cover;
 	background-position: center;
-	background-attachment: scroll;
+	background-attachment: fixed;
 	font-family: 'roboto', sans-serif;
 }
 
@@ -21,6 +23,7 @@ header {
 	font-size: 20px;
 	margin-bottom: 4px;
 }
+
 button {
 	width: 100px;
 	border: 0px;
@@ -28,6 +31,7 @@ button {
 	border-radius: 3px;
 	box-shadow: 0 0 2em rgb(104, 48, 47);
 }
+
 a {
 	font-size: 15px;
 	color: white;
@@ -64,19 +68,17 @@ span {
 }
 
 section {
+	border-radius: 30px;
 	width: 300px;
-	margin: 10px;
+	margin: 10px auto;
 	padding: 5px;
 	backdrop-filter: blur(20px);
-	-webkit-backdrop-filter: blur(20px);
+	-webkit-backdrop-filter: blur(1px);
 	box-shadow: 0 0 2em rgb(104, 48, 47);
 }
 
-#grid {
-	display: inline-block;
-}
-
 section h2 {
+	border-radius: 30px;
 	background-color: #CE3737;
 	padding: 8px 16px;
 	text-align: center;
