--- a/pratos.css
+++ b/pratos.css
@@ -8,7 +8,6 @@ body {
 	width: 100%;
 	background-color: #fed1ca;
 	background-image: url(./fundo7.jpg);
-	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
 	font-family: 'roboto', sans-serif;
@@ -41,7 +40,6 @@ a {
 h1 {
 	font-family: 'Siamese Katsong', sans-serif;
 	font-size: 50px;
-	margin-bottom: 4px;
 	text-shadow: 5px 5px 5px darkred;
 }
 
@@ -71,7 +69,7 @@ section {
 	border-radius: 30px;
 	width: 300px;
 	margin: 10px auto;
-	padding: 5px;
+	padding: 15px;
 	backdrop-filter: blur(20px);
 	-webkit-backdrop-filter: blur(20px);
 	box-shadow: 0 0 2em rgb(104, 48, 47);
@@ -79,7 +77,7 @@ section {
 
 section h2 {
 	border-radius: 30px;
-	background-color: #CE3737;
+	background-color: #ce3737;
 	padding: 8px 16px;
 	text-align: center;
 	margin-bottom: 24px;
