--- a/pratos.css
+++ b/pratos.css
@@ -7,7 +7,7 @@ body {
 	align-items: center;
 	width: 100%;
 	background-color: #fed1ca;
-	background-image: url(./fundo7.jpg);
+	/*background-image: url(./fundo7.jpg);*/
 	background-position: center;
 	background-attachment: fixed;
 	font-family: 'roboto', sans-serif;
