--- a/pratos.css
+++ b/pratos.css
@@ -30,7 +30,13 @@ button {
 	border-radius: 3px;
 	box-shadow: 0 0 2em rgb(104, 48, 47);
 }
-
+.whatsapp {
+	position: fixed;
+	width: 60px;
+	bottom: 40px;
+	right: 40px;
+	z-index: 1000;
+}
 a {
 	font-size: 15px;
 	color: white;
@@ -51,9 +57,9 @@ h2 {
 
 h3 {
 	text-transform: uppercase;
+	text-decoration: underline;
 	font-size: 16px;
 	margin-bottom: 5px;
-	text-decoration: underline;
 }
 
 span {
