--- a/pratos.css
+++ b/pratos.css
@@ -33,10 +33,22 @@ button {
 .whatsapp {
 	position: fixed;
 	width: 60px;
+	height: 60px;
 	bottom: 5px;
 	right: 5px;
+	text-align: center;
+	background-color: #25d366;
+	color: #fff;
+	border-radius: 50px;
+	font-size: 30px;
+	box-shadow: 1px 1px 1px #888
 	z-index: 1000;
 }
+
+.fa-whatsapp {
+	margin: 16px;
+}
+
 a {
 	font-size: 15px;
 	color: white;
