--- a/pratos.css
+++ b/pratos.css
@@ -72,6 +72,9 @@ h3 {
 	font-size: 16px;
 	margin-bottom: 5px;
 }
+img {
+width: 100px;
+}
 
 span {
 	color: #CE3737;
@@ -95,9 +98,9 @@ section {
 section h2 {
 	border-radius: 30px;
 	background-color: #ce3737;
-	padding: 8px 16px;
+	padding: 8px;
 	text-align: center;
-	margin-bottom: 24px;
+	margin-bottom: 5px;
 	font-size: 25px;
 
 }
