--- a/pratos.css
+++ b/pratos.css
@@ -1,595 +1,118 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-	<head>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,700&family=Roboto:wght@400;700&display=swap"
-			rel="stylesheet"/>
-		<link href="http://fonts.cdnfonts.com/css/siamese-katsong" rel="stylesheet">
-
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>HaruSushi</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css
-
-
-
-		">
-		<link rel="stylesheet" href="./pratos.css" />
-		<link rel="icon" type="image/x-icon" href="./icone.jpg">
-
-
-	</head>
-	<body>
-
-		<a class="whatsapp" href="https://api.whatsapp.com/send?phone=5542999220748&text=Ol%C3%A1%2C%20eu%20gostaria%20de%20fazer%20um%20pedido." target="_blank">
-			<i class="fa fa-whatsapp"></i>
-			</a>
-
-		<header>
-			<h1>Haru<span>Sushi</span></h1>
-
-                <p class="subtittle">Sushi e Temaki</p>
-                
-                <p class="subtittle">Delivey</p>
-
-			<button><a href="index.html">VOLTAR</a></button>
-		</header>
-
-								
-			<section id="grid">			<!--INICIO DE COMBINADOS-->
-
-				<h2>Combinados</h2>
-				<center><img src="./combo.png"/></center>
-				
-				<ul>
-					<li>
-						<div class="Details">
-							<h3>Combinado 1</h3>
-							<p>
-								1 Temaki, 4 Uramaki philadelphia, 4 Hot Holls
-								philadelphia e 100g de Sashimi de salmão.
-							</p>
-						</div>
-
-						<strong class="price"> R$49,50 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Combinado 2</h3>
-							<p>
-								4 uramaki philadelphia, 4 Uramaki salmão
-								grelhado 4 Hossomaki philadelphia, 2 Joy
-								philadelphia e 100g de Sashimi de salmão.
-							</p>
-						</div>
-
-						<strong class="price"> R$49,50 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Combinado 3</h3>
-							<p>
-								4 Uramaki california. 4 Uramaki philadelphia, 2
-								Niguiri salmão, 2 Joy philadelphia e 10 unid. de
-								Sashimi de salmão
-							</p>
-						</div>
-
-						<strong class="price"> R$60,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Combinado 4</h3>
-							<p>
-								8 Hot rolls de atum com cream cheese, 8
-								Hossomaki salmão, 4 Gunkan de salmão, 2 Niguiri
-								de salmão, 8 Uramaki salmão e 4 mini temak de
-								salmão.
-							</p>
-						</div>
-
-						<strong class="price"> R$91,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Combinado 5</h3>
-							<p>
-								8 Hossomaki de kani, 6 Gunkan de salmão, 8 hot
-								rolls de atum, 4 Niguiri de salmão. 8 Uramaki de
-								salmão, 10 Sashimis de salmão.
-							</p>
-						</div>
-
-						<strong class="price"> R$120,00 </strong>
-					</li>
-				</ul>
-			</section>
-		
-								<!--FINAL DE COMBINADOS-->
-
-			<!-- Temaki -->
-
-			<section id="grid">
-				<h2>Temaki</h2>
-				<center><img src="./temaki.png"/></center>
-				<ul>
-					<li>
-						<div class="Details">
-							<h3>Philadelphia</h3>
-							<p>
-								Salmão fresco, cream cheese, cebolinha, envoltos
-								por arroz e uma folha de alga desidratada.
-							</p>
-						</div>
-
-						<strong class="price"> R$18,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Kani</h3>
-							<p>
-								Kani fresco envolto por arroz e uma alga
-								desidratada por fora.
-							</p>
-						</div>
-
-						<strong class="price"> R$18,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>California</h3>
-							<p>
-								Kani, manga, pepino fresco, cream chesse,
-								envolto por arroz e uma alga desidratada.
-							</p>
-						</div>
-
-						<strong class="price"> R$18,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Salmão skin</h3>
-							<p>
-								Pele de salmão frita e batida com cream cheese,
-								envolto por arroz e uma folha de alga
-								desidratada por fora.
-							</p>
-						</div>
-
-						<strong class="price"> R$18,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Alaskan</h3>
-							<p>
-								Salmão, pepino, cream cheese, envolto por arroz
-								e uma folha desidratada por fora.
-							</p>
-						</div>
-
-						<strong class="price"> R$18,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Salmão grelhado</h3>
-							<p>
-								Salmão grelhado, cream cheese, envolto por arroz
-								e uma folha de alga desidratada por fora.
-							</p>
-						</div>
-
-						<strong class="price"> R$18,00 </strong>
-					</li>
-				</ul>
-			</section>
-
-			<!-- Hot Holls -->
-
-			<section id="grid">
-				<h2>Hot Holls</h2>
-				<center><img src="./hot-holl.png"/></center>
-				<ul>
-					<li>
-						<div class="Details">
-							<h3>Philadelphia</h3>
-							<p>
-								Salmão fresco, cream cheese, cebolinha, envolto
-								por arroz e uma folha de alga desidratada por
-								fora.
-							</p>
-						</div>
-
-						<strong class="price"> R$19,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Philadelphia Extra</h3>
-							<p>
-								Salmão fresco, cream cheese, cebolinha, envolto
-								por arroz e uma folha de alga desidratada por
-								fora.
-							</p>
-						</div>
-
-						<strong class="price"> R$24,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Kani</h3>
-							<p>
-								Kani fresco, envolto por arroz e uma folha de
-								alga desidratada por fora.
-							</p>
-						</div>
-
-						<strong class="price"> R$19,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Skin</h3>
-							<p>
-								Pele de salmão batida, cream cheese, cebolinha,
-								envolto por arroz e uma alga desidratada por
-								fora.
-							</p>
-						</div>
-
-						<strong class="price"> R$19,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Atum</h3>
-							<p>
-								Atum, cream cheese, cebolinha, envolto por arroz
-								e uma folha de alga desidratada por fora.
-							</p>
-						</div>
-
-						<strong class="price"> R$19,00 </strong>
-					</li>
-				</ul>
-			</section>
-
-			<section id="grid">          <!-- DICAS -->   
-				<h2>Dicas</h2>
-				<center><img src="./dicas.png"/></center>
-				<ul>
-					<li>
-						<div class="Details">
-							<h3>DICA 1</h3>
-							<p>
-								4 Uramaki philadelphia,4 Hossomaki philadelphia,
-								2 Niguiri salmão e 2 Joy philadelphia.
-							</p>
-						</div>
-
-						<strong class="price"> R$31,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>DICA 2</h3>
-							<p>
-								4 Uramaki philadelphia, 4 Hossomaki philadelphia
-								e 50G de sashimi de salmão.
-							</p>
-						</div>
-
-						<strong class="price"> R$25,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>DICA 3</h3>
-							<p>
-								5 Hot Holls philadelphia, 4 Futomaki california
-								e 4 Uramaki philadelphia.
-							</p>
-						</div>
-
-						<strong class="price"> R$27,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>DICA 4</h3>
-							<p>
-								8 Uramaki de morango fresco com chocolate
-								(nutella) e 4 Ichigos.
-							</p>
-						</div>
-
-						<strong class="price"> R$24,00 </strong>
-					</li>
-				</ul>
-			</section>   			
-								<!-- FINAL DICAS -->
-
-
-			<section id="grid">			<!-- INICIO HOSSOMAKI -->
-				<h2>Hossomaki</h2>
-				<center><img src="./hossomaki.png"/></center>
-				<ul>
-					<li>
-						<div class="Details">
-							<h3>Philadelphia</h3>
-							<p>
-								Salmão fresco, cream cheese, cebolinha envolto
-								por arroz e uma folha de alga desidratada por
-								fora (nori).
-							</p>
-						</div>
-
-						<strong class="price"> R$16,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Kani</h3>
-							<p>
-								Kani fresco envolto por arroz e uma folha de
-								alga desidratada por fora (nori).
-							</p>
-						</div>
-
-						<strong class="price"> R$16,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>pepino</h3>
-							<p>
-								Pepino fresco envolto por arroz e uma folha de
-								alga desidratada por fora (cani).
-							</p>
-						</div>
-
-						<strong class="price"> R$13,00 </strong>
-					</li>
-				</ul>
-			</section>			<!-- FINAL HASSOMAKI -->
-
-			<!-- Gunkan -->
-
-			<section id="grid">
-				<h2>Gunkan</h2>
-				<center><img src="./gunkan.png"/></center>
-				<ul>
-					<li>
-						<div class="Details">
-							<h3>Gunkan</h3>
-							<img src="" alt="">
-							<p>
-								Alga (nori) envolto em arroz, cream cheese e
-								salmão batido, coberto com geléia de pimenta e
-								cebolinha.
-							</p>
-						</div>
-
-						<strong class="price"> R$20,00 </strong>
-					</li>
-				</ul>
-			</section>
-
-
-						<!-- Uramaki -->
-
-			<section id="grid">
-				<h2>uramaki</h2>
-				<center><img src="./uramaki.png"/></center>
-				<ul>
-					<li>
-						<div class="Details">
-							<h3>Philadelphia</h3>
-							<p>
-								Salmão fresco, cream cheese, cebolinha envolto
-								por arroz e uma folha de alga desidratada por
-								fora (nori).
-							</p>
-						</div>
-
-						<strong class="price"> R$18,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Salmão skin</h3>
-							<p>
-								Pele de salmão batida envolto por arroz e uma
-								folha de alga desidratada por dentro (nori).
-							</p>
-						</div>
-
-						<strong class="price"> R$16,00 </strong>
-					</li>
-					<li>
-						<div class="Details">
-							<h3>Alaskan</h3>
-							<p>
-								Pepino fresco envolto por arroz e uma folha de
-								alga desidratada por fora (nori).
-							</p>
-						</div>
-
-						<strong class="price"> R$18,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>California</h3>
-							<p>
-								Pepino fresco envolto por arroz e uma folha de
-								alga desidratada por dentro (nori).
-							</p>
-						</div>
-
-						<strong class="price"> R$18,00 </strong>
-					</li>
-				</ul>
-			</section>
-
-			<!-- Futomaki -->
-
-			<section id="grid">
-				<h2>Futomaki</h2>
-				<center><img src="./futomaki.png"/></center>
-				<ul>
-					<li>
-						<div class="Details">
-							<h3>philadelphia</h3>
-							<p>
-								Salmão fresco, cream cheese, cebolinha envoltos
-								por arroz e uma folha de alga desidratada por
-								dentro (nori).
-							</p>
-						</div>
-
-						<strong class="price"> R$18,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Kani</h3>
-							<p>
-								Kani fresco envoltoi por arroz e uma folha de
-								alga desidratada por fora (nori).
-							</p>
-						</div>
-
-						<strong class="price"> R$18,00 </strong>
-					</li>
-					<li>
-						<div class="Details">
-							<h3>California</h3>
-							<p>
-								Kani, manga, pepino fresco, cream cheese,
-								envoltos por arroz e uma alga desidratada por
-								fora (cani).
-							</p>
-						</div>
-
-						<strong class="price"> R$18,00 </strong>
-					</li>
-				</ul>
-			</section>
-		</div>
-			<!-- Niguiri -->
-
-			<section id="grid">
-				<h2>Niguiri</h2>
-				<center><img src="./niguiri.png"/></center>
-				<ul>
-					<li>
-						<div class="Details">
-							<h3>Salmão</h3>
-							<p>Bolinhos de arroz e salmão fresco.</p>
-						</div>
-
-						<strong class="price"> R$13,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Skin</h3>
-							<p>Bolinhos de arroz e pele de salmão frita.</p>
-						</div>
-
-						<strong class="price"> R$10,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Kani</h3>
-							<p>Bolinhos de arroz e kani fresco.</p>
-						</div>
-
-						<strong class="price"> R$10,00 </strong>
-					</li>
-				</ul>
-			</section>
-
-			<!-- Joy -->
-
-			<section id="grid">
-				<h2>Joy</h2>
-				<center><img src="./joy.png"/></center>
-				<ul>
-					<li>
-						<div class="Details">
-							<h3>philadelphia</h3>
-							<p>Salão envolto com alga e cream cheese.</p>
-						</div>
-
-						<strong class="price"> R$30,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Salmão maçaricado</h3>
-							<p>Salmão envolto de salmão maçaricado.</p>
-						</div>
-
-						<strong class="price"> R$34,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Salmão com kani</h3>
-							<p>Kani envolto de salmão.</p>
-						</div>
-
-						<strong class="price"> R$32,00 </strong>
-					</li>
-				</ul>
-			</section>
-
-
-			<!-- Barca -->
-
-			<section id="grid">
-				<h2>Barca</h2>
-				<center><img src="./barca.png"/></center>
-				<ul>
-					<li>
-						<div class="Details">
-							<h3>Barca especial</h3>
-							<p>
-								6 uramakis california, 6 Hot Holls de salmão, 6
-								Hot Holls de atum, 4 Niguiri de salmão, 2
-								Niguiri de skin, 4 Joy salmão, 100G de sashimi
-								de salmão, 6 futomake california e 2 Temaki
-								philadelphia.
-							</p>
-						</div>
-
-						<strong class="price"> R$132,00 </strong>
-					</li>
-				</ul>
-			</section>
-
-		<div>
-            <footer>
-                POWERED BY <a href="https://www.instagram.com/maiketidre" target="_blank">MAIKE TIDRE</a>
-            </footer>
-        </div>
-
-	</body>
-</html>
-
+* {
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	align-items: center;
+	width: 100%;
+	background-color: #fed1ca;
+	/*background-image: url(./fundo7.jpg);*/
+	background-position: center;
+	background-attachment: fixed;
+	font-family: 'roboto', sans-serif;
+}
+
+header {
+	padding: 35px 0;
+	text-align: center;
+	max-width: 300px;
+	border: 1px;
+	margin: 0 auto;
+	font-size: 20px;
+	margin-bottom: 4px;
+}
+
+button {
+	width: 100px;
+	border: 0px;
+	background-color: red;
+	border-radius: 3px;
+	box-shadow: 0 0 2em rgb(104, 48, 47);
+}
+.whatsapp {
+	position: fixed;
+	width: 60px;
+	height: 60px;
+	bottom: 5px;
+	right: 5px;
+	text-align: center;
+	background-color: #25d366;
+	color: #fff;
+	border-radius: 50px;
+	font-size: 30px;
+	z-index: 1000;
+}
+
+.fa-whatsapp {
+	margin: 16px;
+}
+
+a {
+	font-size: 15px;
+	color: white;
+	text-decoration: none;
+}
+
+h1 {
+	font-family: 'Siamese Katsong', sans-serif;
+	font-size: 50px;
+	text-shadow: 5px 5px 5px darkred;
+}
+
+h2 {
+	text-transform: uppercase;
+	font-family: 'Siamese Katsong', sans-serif;
+	text-shadow: 5px 5px 5px darkred;
+}
+
+h3 {
+	text-transform: uppercase;
+	text-decoration: underline;
+	font-size: 16px;
+	margin-bottom: 5px;
+}
+img {
+width: 100px;
+}
+
+span {
+	color: #CE3737;
+}
+
+.subtitle {
+	color: #CE3737;
+	font-size: 20px;
+}
+
+section {
+	border-radius: 30px;
+	width: 300px;
+	margin: 10px auto;
+	padding: 15px;
+	backdrop-filter: blur(20px);
+	-webkit-backdrop-filter: blur(20px);
+	box-shadow: 0 0 2em rgb(104, 48, 47);
+}
+
+section h2 {
+	border-radius: 30px;
+	background-color: #ce3737;
+	padding: 8px;
+	text-align: center;
+	margin-bottom: 5px;
+	font-size: 25px;
+
+}
+ul li {
+	margin-bottom: 16px;
+	display: flex;
+}
+
+footer {
+	width: 100%;
+	background-color: red;
+    font-size: 10px;
+    text-align: center;
+    font-weight: bold;
+}
